# johns_project

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  plan.md  pyproject.toml  review.md  servicenow_analyzer.py
.github/workflows/: ci.yml  release.yml
data/: app.db
data/faiss/: 1.index  1.npz  3.meta.json  3.npz
docs/: architecture.md  reference_behavior.md  release.md  tools_plan.md  wbs.md
docs/ai/: tools_registry_spec.md
docs/operations/: backup_restore.md
scripts/: final_verify.sh  release_check.sh
src/: __init__.py
src/ai/: __init__.py
src/ai/embeddings/: builtin_embedder.py  factory.py  interface.py  sentence_transformers_embedder.py
src/ai/llm/: __init__.py  factory.py  interface.py  offline_analyzer.py  openai_analyzer.py
src/ai/llm/prompts/: store.py
src/ai/llm/prompts/prompts/templates/: v_test_audit.meta.json
src/ai/llm/tools/: __init__.py  registry.py
src/ai/rerank/: __init__.py  builtin_lexical.py  cross_encoder.py  factory.py  interface.py
src/api/: __init__.py  main.py
src/api/routers/: __init__.py  analysis.py  analytics.py  cluster.py  embed.py  history.py  ingest.py  metrics.py  reports.py  search.py
src/config/: __init__.py  env.py  logging.yaml  settings.py
src/db/: __init__.py  models.py  session.py
src/db/repositories/: analyses_repo.py  audit_repo.py  clusters_repo.py  datasets_repo.py  embeddings_repo.py  tickets_repo.py
src/engine/analytics/: clustering.py  metrics.py  visualizations.py
src/engine/features/: sampling.py
src/engine/ingest/: loader.py
src/engine/preprocess/: clean.py
src/observability/: metrics.py  tracing.py
src/sd_onboarding_analyzer/: __init__.py
src/sd_onboarding_analyzer/cli/: __init__.py  __main__.py  app_factory.py  run_pipeline.py
src/security/: auth.py
src/utils/: __init__.py  logging.py
src/vector_store/: faiss_index.py
tests/: conftest.py
tests/ai/tools/: test_dispatcher_sequence_offline.py  test_error_paths.py  test_metrics_observability.py  test_registry_audit.py  test_registry_rbac.py  test_registry_validation.py
tests/data/: tickets_small.csv
tests/e2e/smoke/: test_e2e_pipeline.py
tests/integration/api/: test_analysis_run.py  test_analytics_metrics.py  test_cluster_run.py  test_embed_run.py  test_health.py  test_history_reports.py  test_ingest_upload.py  test_metrics_endpoint.py  test_search_nn.py  test_search_rerank.py
tests/integration/audit/: test_audit_log.py
tests/integration/cli/: test_cli_pipeline.py
tests/integration/security/: test_rbac.py
